--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -31,19 +31,73 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Test</td><td class="numi">3</td><td class="numi">3</td><td class="numi">0</td><td class="numi">0</td><td class="numi">40.3 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Test1</td><td class="numi">0</td><td class="numi">0</td><td class="numi_attn">4</td><td class="numi">0</td><td class="numi">9.3 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="passed" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Test &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">com.learnautomation.testcases.ver_title</td><td><a href="#m1"><b>verify_title</b>  </a></td><td class="numi">1</td><td>1479041956160</td><td class="numi">34</td></tr>
-<tr class="passedeven"><td rowspan="2">com.learnautomation.testcases.verify_Registration</td><td><a href="#m2"><b>Registration</b>  </a></td><td class="numi">1</td><td>1479041966828</td><td class="numi">18575</td></tr><tr class="passedeven"><td><a href="#m3"><b>Login</b>  </a></td><td class="numi">1</td><td>1479041985413</td><td class="numi">485</td></tr>
+<tr><th colspan="4">Test1 &#8212; failed (configuration methods)</th></tr>
+<tr class="failedodd"><td rowspan="1">com.learnautomation.testcases.verify_Registration_page</td><td><a href="#m1"><b>open_browser</b>  </a></td><td class="numi">1</td><td>1487867555490</td><td class="numi">0</td></tr>
+<tr><th colspan="4">Test1 &#8212; skipped (configuration methods)</th></tr>
+<tr class="skippedodd"><td rowspan="2">com.learnautomation.testcases.verify_Registration_page</td><td><a href="#m2"><b>close_browser</b>  </a></td><td class="numi">1</td><td>1487867564752</td><td class="numi">0</td></tr><tr class="skippedodd"><td><a href="#m3"><b>setup</b>  </a></td><td class="numi">1</td><td>1487867564728</td><td class="numi">0</td></tr>
+<tr><th colspan="4">Test1 &#8212; skipped</th></tr>
+<tr class="skippedodd"><td rowspan="4">com.learnautomation.testcases.verify_Registration_page</td><td><a href="#m4"><b>nav_to_Reg</b>  </a></td><td class="numi">1</td><td>1487867564733</td><td class="numi">3</td></tr><tr class="skippedodd"><td><a href="#m5"><b>user_Login</b>  </a></td><td class="numi">1</td><td>1487867564739</td><td class="numi">1</td></tr><tr class="skippedodd"><td><a href="#m6"><b>Index_Assignment1_count_no_of_box</b>  </a></td><td class="numi">1</td><td>1487867564742</td><td class="numi">1</td></tr><tr class="skippedodd"><td><a href="#m7"><b>Index_Assignment2</b>  </a></td><td class="numi">1</td><td>1487867564746</td><td class="numi">3</td></tr>
 </table>
-<h1>Test</h1>
-<h2 id="m1">com.learnautomation.testcases.verify_Registration:Registration</h2>
+<h1>Test1</h1>
+<h2 id="m1">com.learnautomation.testcases.verify_Registration_page:open_browser</h2>
+<div style="padding-left:3em">
+<p>chrome not reachable
+  (Session info: chrome=56.0.2924.87)
+  (Driver info: chromedriver=2.25.426923 (0390b88869384d6eb0d5d09729679f934aab9eed),platform=Windows NT 6.1.7601 SP1 x86_64) (WARNING: The server did not provide any stacktrace information)
+Command duration or timeout: 4.08 seconds
+Build info: version: &apos;3.0.1&apos;, revision: &apos;1969d75&apos;, time: &apos;2016-10-18 09:49:13 -0700&apos;
+System info: host: &apos;AMIYOABHIRUP&apos;, ip: &apos;192.168.0.102&apos;, os.name: &apos;Windows 7&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;6.1&apos;, java.version: &apos;1.8.0_20&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Capabilities [{applicationCacheEnabled=false, rotatable=false, mobileEmulationEnabled=false, networkConnectionEnabled=false, chrome={chromedriverVersion=2.25.426923 (0390b88869384d6eb0d5d09729679f934aab9eed), userDataDir=C:\Users\AMIYO_~3\AppData\Local\Temp\scoped_dir2784_7994}, takesHeapSnapshot=true, pageLoadStrategy=normal, databaseEnabled=false, handlesAlerts=true, hasTouchScreen=false, version=56.0.2924.87, platform=XP, browserConnectionEnabled=false, nativeEvents=true, acceptSslCerts=true, locationContextEnabled=true, webStorageEnabled=true, browserName=chrome, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true}]
+Session ID: f71ef24dd2a328003e4b29c871b5733b</p>
+sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
+<br/>at sun.reflect.NativeConstructorAccessorImpl.newInstance(Unknown Source)
+<br/>at sun.reflect.DelegatingConstructorAccessorImpl.newInstance(Unknown Source)
+<br/>at java.lang.reflect.Constructor.newInstance(Unknown Source)
+<br/>at org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:216)
+<br/>at org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:168)
+<br/>at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:635)
+<br/>at org.openqa.selenium.remote.RemoteWebDriver.get(RemoteWebDriver.java:322)
+<br/>at base_class.Dynamic_browser.open_browser(Dynamic_browser.java:59)
+<br/>at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+<br/>at sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)
+<br/>at sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)
+<br/>at java.lang.reflect.Method.invoke(Unknown Source)
+<br/>at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:80)
+<br/>at org.testng.internal.Invoker.invokeConfigurationMethod(Invoker.java:564)
+<br/>at org.testng.internal.Invoker.invokeConfigurations(Invoker.java:213)
+<br/>at org.testng.internal.Invoker.invokeConfigurations(Invoker.java:138)
+<br/>at org.testng.TestRunner.beforeRun(TestRunner.java:641)
+<br/>at org.testng.TestRunner.run(TestRunner.java:609)
+<br/>at org.testng.SuiteRunner.runTest(SuiteRunner.java:334)
+<br/>at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)
+<br/>at org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)
+<br/>at org.testng.SuiteRunner.run(SuiteRunner.java:240)
+<br/>at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
+<br/>at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:86)
+<br/>at org.testng.TestNG.runSuitesSequentially(TestNG.java:1198)
+<br/>at org.testng.TestNG.runSuitesLocally(TestNG.java:1123)
+<br/>at org.testng.TestNG.run(TestNG.java:1031)
+<br/>at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:132)
+<br/>at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:236)
+<br/>at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:81)
+<br/>1 lines not shown
+</div>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">com.learnautomation.testcases.verify_Registration:Login</h2>
+<h2 id="m2">com.learnautomation.testcases.verify_Registration_page:close_browser</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">com.learnautomation.testcases.ver_title:verify_title</h2>
+<h2 id="m3">com.learnautomation.testcases.verify_Registration_page:setup</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m4">com.learnautomation.testcases.verify_Registration_page:Index_Assignment1_count_no_of_box</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m5">com.learnautomation.testcases.verify_Registration_page:Index_Assignment2</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m6">com.learnautomation.testcases.verify_Registration_page:nav_to_Reg</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m7">com.learnautomation.testcases.verify_Registration_page:user_Login</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
