--- a/test-output/index.html
+++ b/test-output/index.html
@@ -37,7 +37,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Suite">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-skipped">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Suite">
-                    <span>D:\workspace\maven_project2\learnselenium\testng.xml</span>
+                    <span>D:\workspace\maven_project2\learnselenium\src\main\resources\testng.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -90,31 +90,36 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">4 methods,  4 skipped,  </span>
                   </li>
                   <li>
-                    <span class="method-list-title passed">Passed methods</span>
-                    <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-Suite" class="hide-methods passed suite-Suite"> (hide)</a> <!-- hide-methods passed suite-Suite -->
-                      <a href="#" panel-name="suite-Suite" class="show-methods passed suite-Suite"> (show)</a> <!-- show-methods passed suite-Suite -->
+                    <span class="method-list-title skipped">Skipped methods</span>
+                    <span class="show-or-hide-methods skipped">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods skipped suite-Suite"> (hide)</a> <!-- hide-methods skipped suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods skipped suite-Suite"> (show)</a> <!-- show-methods skipped suite-Suite -->
                     </span>
-                    <div class="method-list-content passed suite-Suite">
+                    <div class="method-list-content skipped suite-Suite">
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.learnautomation.testcases.verify_Registration" hash-for-method="Login">Login</a> <!-- method navigator-link -->
+                        <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.learnautomation.testcases.verify_Registration_page" hash-for-method="Index_Assignment1_count_no_of_box">Index_Assignment1_count_no_of_box</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.learnautomation.testcases.verify_Registration" hash-for-method="Registration">Registration</a> <!-- method navigator-link -->
+                        <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.learnautomation.testcases.verify_Registration_page" hash-for-method="Index_Assignment2">Index_Assignment2</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.learnautomation.testcases.ver_title" hash-for-method="verify_title">verify_title</a> <!-- method navigator-link -->
+                        <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.learnautomation.testcases.verify_Registration_page" hash-for-method="nav_to_Reg">nav_to_Reg</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-Suite -->
+                      <span>
+                        <img width="3%" src="skipped.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Suite" title="com.learnautomation.testcases.verify_Registration_page" hash-for-method="user_Login">user_Login</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content skipped suite-Suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -126,68 +131,65 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
-          <div class="suite-Suite-class-passed">
+          <div class="suite-Suite-class-skipped">
             <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.learnautomation.testcases.verify_Registration</span>
+              <img src="skipped.png"/>
+              <span class="class-name">com.learnautomation.testcases.verify_Registration_page</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Login">
-                  </a> <!-- Login -->
-                  <span class="method-name">Login</span>
+                  <a name="Index_Assignment1_count_no_of_box">
+                  </a> <!-- Index_Assignment1_count_no_of_box -->
+                  <span class="method-name">Index_Assignment1_count_no_of_box</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="Registration">
-                  </a> <!-- Registration -->
-                  <span class="method-name">Registration</span>
+                  <a name="Index_Assignment2">
+                  </a> <!-- Index_Assignment2 -->
+                  <span class="method-name">Index_Assignment2</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
-          <div class="suite-Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">com.learnautomation.testcases.ver_title</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="verify_title">
-                  </a> <!-- verify_title -->
-                  <span class="method-name">verify_title</span>
+                  <a name="nav_to_Reg">
+                  </a> <!-- nav_to_Reg -->
+                  <span class="method-name">nav_to_Reg</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="user_Login">
+                  </a> <!-- user_Login -->
+                  <span class="method-name">user_Login</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Suite-class-passed -->
+          </div> <!-- suite-Suite-class-skipped -->
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\workspace\maven_project2\learnselenium\testng.xml</span>
+            <span class="header-content">D:\workspace\maven_project2\learnselenium\src\main\resources\testng.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;Suite&quot;&gt;
-  &lt;test name=&quot;Test&quot;&gt;
+&lt;suite thread-count=&quot;1&quot; name=&quot;Suite&quot;&gt;
+  &lt;test name=&quot;Test1&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.learnautomation.testcases.ver_title&quot;&gt;
+      &lt;class name=&quot;com.learnautomation.testcases.verify_Registration_page&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;verify_title&quot;/&gt;
+          &lt;include name=&quot;nav_to_Reg&quot;/&gt;
+          &lt;include name=&quot;user_Login&quot;/&gt;
+          &lt;include name=&quot;Index_Assignment1_count_no_of_box&quot;/&gt;
+          &lt;include name=&quot;Index_Assignment2&quot;/&gt;
+          &lt;exclude name=&quot;Enter_reg_details&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.learnautomation.testcases.ver_title --&gt;
-      &lt;class name=&quot;com.learnautomation.testcases.verify_Registration&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;Registration&quot;/&gt;
-          &lt;include name=&quot;Login&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- com.learnautomation.testcases.verify_Registration --&gt;
+      &lt;/class&gt; &lt;!-- com.learnautomation.testcases.verify_Registration_page --&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Test --&gt;
+  &lt;/test&gt; &lt;!-- Test1 --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -199,7 +201,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Test (2 classes)</span>
+                <span class="test-name">Test1 (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -225,24 +227,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Registration')
-data.setCell(0, 2, 'com.learnautomation.testcases.verify_Registration')
-data.setCell(0, 3, 18575);
+data.setCell(0, 1, 'Index_Assignment2')
+data.setCell(0, 2, 'com.learnautomation.testcases.verify_Registration_page')
+data.setCell(0, 3, 3);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Login')
-data.setCell(1, 2, 'com.learnautomation.testcases.verify_Registration')
-data.setCell(1, 3, 485);
+data.setCell(1, 1, 'nav_to_Reg')
+data.setCell(1, 2, 'com.learnautomation.testcases.verify_Registration_page')
+data.setCell(1, 3, 3);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verify_title')
-data.setCell(2, 2, 'com.learnautomation.testcases.ver_title')
-data.setCell(2, 3, 34);
+data.setCell(2, 1, 'Index_Assignment1_count_no_of_box')
+data.setCell(2, 2, 'com.learnautomation.testcases.verify_Registration_page')
+data.setCell(2, 3, 1);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'user_Login')
+data.setCell(3, 2, 'com.learnautomation.testcases.verify_Registration_page')
+data.setCell(3, 3, 1);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 19 seconds</span>
+              <span class="suite-total-time">Total running time: 8 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -257,9 +263,16 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">1 ignored method</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">com.learnautomation.testcases.verify_Registration_page</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">Enter_reg_details</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Suite" class="panel">
@@ -268,46 +281,29 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.learnautomation.testcases.ver_title</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
+              <div class="chronological-class-name">com.learnautomation.testcases.verify_Registration_page</div> <!-- chronological-class-name -->
+              <div class="configuration-test before">
+                <img src="failed.png">
+                </img>
                 <span class="method-name">open_browser</span>
                 <span class="method-start">0 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="configuration-class before">
-                <span class="method-name">setup</span>
-                <span class="method-start">8220 ms</span>
-              </div> <!-- configuration-class before -->
+              </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">verify_title</span>
-                <span class="method-start">8222 ms</span>
-              </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">close_browser</span>
-                <span class="method-start">8258 ms</span>
-              </div> <!-- configuration-class after -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.learnautomation.testcases.verify_Registration</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">open_browser</span>
-                <span class="method-start">11774 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="configuration-class before">
-                <span class="method-name">setup</span>
-                <span class="method-start">18890 ms</span>
-              </div> <!-- configuration-class before -->
-              <div class="test-method">
-                <span class="method-name">Registration</span>
-                <span class="method-start">18890 ms</span>
+                <span class="method-name">nav_to_Reg</span>
+                <span class="method-start">9243 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">Login</span>
-                <span class="method-start">37475 ms</span>
+                <span class="method-name">user_Login</span>
+                <span class="method-start">9249 ms</span>
               </div> <!-- test-method -->
-              <div class="configuration-class after">
-                <span class="method-name">close_browser</span>
-                <span class="method-start">37962 ms</span>
-              </div> <!-- configuration-class after -->
+              <div class="test-method">
+                <span class="method-name">Index_Assignment1_count_no_of_box</span>
+                <span class="method-start">9252 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">Index_Assignment2</span>
+                <span class="method-start">9256 ms</span>
+              </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
