--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,3 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.learnautomation.testcases.verify_Registration_page.Enter_reg_details</td></tr>
 </table>
