--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,22 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a48474">  <td>16/11/13 18:29:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Dynamic_browser.open_browser()[pri:0, instance:com.learnautomation.testcases.ver_title@1774679]">&gt;&gt;open_browser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16834438</td>   <td></td> </tr>
-<tr bgcolor="a57a9b">  <td>16/11/13 18:29:16</td>   <td>8204</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ver_title.setup()[pri:0, instance:com.learnautomation.testcases.ver_title@1774679]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16834438</td>   <td></td> </tr>
-<tr bgcolor="a57a9b">  <td>16/11/13 18:29:16</td>   <td>8206</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ver_title.verify_title()[pri:0, instance:com.learnautomation.testcases.ver_title@1774679]">verify_title</td> 
-  <td>main@16834438</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>16/11/13 18:29:16</td>   <td>8242</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Dynamic_browser.close_browser()[pri:0, instance:com.learnautomation.testcases.ver_title@1774679]">&lt;&lt;close_browser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16834438</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>16/11/13 18:29:19</td>   <td>11758</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Dynamic_browser.open_browser()[pri:0, instance:com.learnautomation.testcases.verify_Registration@bd1b6a]">&gt;&gt;open_browser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16834438</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>16/11/13 18:29:26</td>   <td>18874</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;verify_Registration.setup()[pri:0, instance:com.learnautomation.testcases.verify_Registration@bd1b6a]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16834438</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>16/11/13 18:29:26</td>   <td>18874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="verify_Registration.Registration()[pri:0, instance:com.learnautomation.testcases.verify_Registration@bd1b6a]">Registration</td> 
-  <td>main@16834438</td>   <td></td> </tr>
-<tr bgcolor="7d6578">  <td>16/11/13 18:29:45</td>   <td>37459</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="verify_Registration.Login()[pri:0, instance:com.learnautomation.testcases.verify_Registration@bd1b6a]">Login</td> 
-  <td>main@16834438</td>   <td></td> </tr>
-<tr bgcolor="a48474">  <td>16/11/13 18:29:45</td>   <td>37946</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Dynamic_browser.close_browser()[pri:0, instance:com.learnautomation.testcases.verify_Registration@bd1b6a]">&lt;&lt;close_browser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@16834438</td>   <td></td> </tr>
+<tr bgcolor="a48474">  <td>17/02/23 22:02:35</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Dynamic_browser.open_browser()[pri:0, instance:com.learnautomation.testcases.verify_Registration_page@cc285f4]">&gt;&gt;open_browser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@237351678</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>17/02/23 22:02:44</td>   <td>9239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="verify_Registration_page.nav_to_Reg()[pri:0, instance:com.learnautomation.testcases.verify_Registration_page@cc285f4]">nav_to_Reg</td> 
+  <td>main@237351678</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>17/02/23 22:02:44</td>   <td>9245</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="verify_Registration_page.user_Login()[pri:0, instance:com.learnautomation.testcases.verify_Registration_page@cc285f4]">user_Login</td> 
+  <td>main@237351678</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>17/02/23 22:02:44</td>   <td>9248</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="verify_Registration_page.Index_Assignment1_count_no_of_box()[pri:0, instance:com.learnautomation.testcases.verify_Registration_page@cc285f4]">Index_Assignment1_count_no_of_box</td> 
+  <td>main@237351678</td>   <td></td> </tr>
+<tr bgcolor="a57a9b">  <td>17/02/23 22:02:44</td>   <td>9252</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="verify_Registration_page.Index_Assignment2()[pri:0, instance:com.learnautomation.testcases.verify_Registration_page@cc285f4]">Index_Assignment2</td> 
+  <td>main@237351678</td>   <td></td> </tr>
 </table>
